exports[`test should render customers 1`] = `
<div>
  <div>
    Here is your list of customers!
  </div>
  <ul>
    <li>
      Bob
    </li>
    <li>
      Joanna
    </li>
  </ul>
</div>
`;

exports[`test should render no customers 1`] = `
<div>
  You have no customers. Better get to work!
</div>
`;

exports[`test should respond to store updates 1`] = `
<CustomerList
  store={
    Object {
      "getCustomers": [Function getCustomers],
      "subscribe": [Function subscribe]
    }
  }>
  <ListOfCustomers
    customers={
      Array [
        Object {
          "name": "Jill"
        },
        Object {
          "name": "Fred"
        }
      ]
    }>
    <div>
      <div>
        Here is your list of customers!
      </div>
      <ul>
        <li>
          Jill
        </li>
        <li>
          Fred
        </li>
      </ul>
    </div>
  </ListOfCustomers>
</CustomerList>
`;
